--- a/lib/updtr_web/templates/layout/_main-content.html.eex
+++ b/lib/updtr_web/templates/layout/_main-content.html.eex
@@ -3,12 +3,13 @@
     <div class="row mb-2">
       <div class="col-sm-6">
         <h1 class="m-0 text-dark">Home</h1>
-      </div><!-- /.col -->
-    </div><!-- /.row -->
-  </div><!-- /.container-fluid -->
+      </div>
+    </div>
+  </div>
 </div>
 <div class="content">
   <div class="container">
+    <%= render "_flash.html", assigns %>
     <%= render @view_module, @view_template, assigns %>
   </div>
 </div>
