--- a/lib/updtr_web/templates/auth/new.html.eex
+++ b/lib/updtr_web/templates/auth/new.html.eex
@@ -1,26 +1,40 @@
 <div class="row justify-content-center">
-  <div class="col col-md-4">
+  <div class="col-md-4">
     <div class="card">
       <div class="card-header">
         Sign in
       </div>
       <div class="card-body">
         <%= form_for @conn, Routes.auth_path(@conn, :create), [method: :post, as: :user], fn f -> %>
-        <div class="form-group">
+        <div class="input-group mb-3">
           <%= email_input f, :email, placeholder: "Email", class: "form-control", required: true %>
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
+          </div>
         </div>
 
-        <div class="form-group">
+        <div class="input-group mb-3">
           <%= password_input f, :password, placeholder: "Password", class: "form-control", required: true %>
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-8">
+            <div class="icheck-primary">
+              <input type="checkbox" id="remember">
+              <label for="remember">
+                Remember Me
+              </label>
+            </div>
         </div>
 
-        <div class="form-group">
-          <input type="checkbox" id="exampleCheck1">
-          <label class="form-check-label remember-me" for="exampleCheck1">Remember me</label>
-        </div>
-
-        <div class="form-group">
-          <%= submit "Login", class: "btn btn-info" %>
+        <div class="col-4">
+          <%= submit "Sign in", class: "btn btn-primary btn-block" %>
         </div>
         <% end %>
       </div>
