--- a/lib/updtr_web/templates/auth/new.html.eex
+++ b/lib/updtr_web/templates/auth/new.html.eex
@@ -1,5 +1,5 @@
-<div class="row justify-content-center">
-  <div class="col-md-4">
+<div class="row justify-content-center mt-5">
+  <div class="col-md-4 mt-5">
     <div class="card">
       <div class="card-header">
         Sign in
