--- a/lib/updtr_web/templates/layout/_main-content.html.eex
+++ b/lib/updtr_web/templates/layout/_main-content.html.eex
@@ -1,13 +1,4 @@
-<div class="content-header">
-  <div class="container">
-    <div class="row mb-2">
-      <div class="col-sm-6">
-        <h1 class="m-0 text-dark">Home</h1>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="content">
+<div class="content pt-3">
   <div class="container">
     <%= render "_flash.html", assigns %>
     <%= render @view_module, @view_template, assigns %>
