--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,11 @@
-@import "admin-lte/build/scss/AdminLTE";
+@import "~admin-lte/build/scss/AdminLTE";
+@import "~admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css";
 
 body {
   font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+footer {
+  margin-left: 0px !important;
 }
