--- a/lib/updtr_web/templates/user/new.html.eex
+++ b/lib/updtr_web/templates/user/new.html.eex
@@ -2,9 +2,10 @@
   <div class="col-md-4 mt-5">
     <div class="card">
       <div class="card-header">
-        Sign in
+        Sign up for <strong>Updtr.io</strong>
       </div>
       <div class="card-body login-card-body">
+        <p class="login-box-msg">Welcome to Updtr.io, fill in the following details to create a new account. By registering you accept the terms of service</p>
         <%= form_for @conn, Routes.auth_path(@conn, :create), [method: :post, as: :user], fn f -> %>
         <div class="input-group mb-3">
           <%= email_input f, :email, placeholder: "Email", class: "form-control", required: true %>
@@ -24,27 +25,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-8">
-            <div class="icheck-primary">
-              <input type="checkbox" id="remember">
-              <label for="remember">
-                Remember Me
-              </label>
-            </div>
-          </div>
-
-          <div class="col-4">
-            <%= submit "Sign in", class: "btn btn-primary btn-block" %>
+          <div class="col-12">
+            <%= submit "Create account", class: "btn btn-primary btn-block" %>
           </div>
 
         </div>
         <% end %>
-        <p class="mb-1">
-          <%= link "Sign up", to: Routes.user_path(@conn, :new) %>
-        </p>
-
-        <p class="mb-1">
-          <%= link "I forgot my password", to: Routes.reset_password_path(@conn, :new) %>
+        <p class="mt-3 mb-1">
+          <%= link "Login", to: Routes.auth_path(@conn, :new) %>
         </p>
       </div>
     </div>
