--- a/lib/updtr_web/templates/user/new.html.eex
+++ b/lib/updtr_web/templates/user/new.html.eex
@@ -32,7 +32,7 @@
         </div>
         <% end %>
         <p class="mt-3 mb-1">
-          <%= link "Login", to: Routes.auth_path(@conn, :new) %>
+          <%= link "I already have an account", to: Routes.auth_path(@conn, :new) %>
         </p>
       </div>
     </div>
