remove unused code + finish sign up

--- a/lib/updtr_web/templates/reset_password/edit.html.eex
+++ b/lib/updtr_web/templates/reset_password/edit.html.eex
@@ -9,7 +9,7 @@
         <%= form_for @changeset, Routes.reset_password_path(@conn, :update), [class: "needs-validation"], fn f -> %>
         <div class="input-group mb-3">
           <%= inputs_for f, :user, fn u -> %>
-            <%= password_input u, :password, placeholder: "Password", class: error_class(u, :password), required: true %>
+            <%= password_input u, :password, placeholder: "Password", class: error_class(u, :password), required: true, minlength: 10, maxlength: 32 %>
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-envelope"></span>
@@ -20,7 +20,7 @@
         </div>
 
         <div class="input-group mb-3">
-          <%= password_input f, :password_confirm, placeholder: "Confirm password", class: "form-control", required: true %>
+          <%= password_input f, :password_confirm, placeholder: "Confirm password", class: "form-control", required: true, minlength: 10, maxlength: 32 %>
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
