--- a/lib/updtr_web/templates/auth/new.html.eex
+++ b/lib/updtr_web/templates/auth/new.html.eex
@@ -1,10 +1,9 @@
-<div class="row justify-content-center mt-5">
-  <div class="col-md-4 mt-5">
-    <div class="card">
-      <div class="card-header">
-        Sign in
-      </div>
-      <div class="card-body login-card-body">
+    <article class="card login">
+      <header>
+        <h3>Sign in</h3>
+      </header>
+
+      <div class="login__body">
         <%= form_for @conn, Routes.auth_path(@conn, :create), [method: :post, as: :user], fn f -> %>
         <div class="input-group mb-3">
           <%= email_input f, :email, placeholder: "Email", class: "form-control", required: true %>
@@ -48,5 +47,3 @@
         </p>
       </div>
     </div>
-  </div>
-</div>
