--- a/lib/updtr_web/templates/layout/_footer.html.eex
+++ b/lib/updtr_web/templates/layout/_footer.html.eex
@@ -1,9 +1,4 @@
-<footer class="main-footer">
-  <!-- To the right -->
-  <div class="float-right d-none d-sm-inline">
-    <strong>Build with <i class="far fa-heart"></i> by
-      <a href="https://bartfokker.com">Bart</a></strong>
-  </div>
-  <strong>Copyright © 2019 <a href="#">updtr.io</a>.</strong> All rights
-  reserved.
+<footer class="footer">
+  <p>Copyright © 2019 Updtr.io. All rights reserved.</p> 
+
 </footer>
