--- a/lib/updtr_web/templates/layout/_navigation.html.eex
+++ b/lib/updtr_web/templates/layout/_navigation.html.eex
@@ -1,17 +1,17 @@
-<nav class="demo">
-  <a href="#" class="brand">
+<nav>
+  <a href="/" class="brand">
     <span class="">Updtr.io</span>
   </a>
   <input id="bmenub" type="checkbox" class="show">
   <label for="bmenub" class="burger pseudo button">&#9776;</label>
 
   <div class="menu">
-    <%= link raw(~s'<i class="fas fa-home"></i> Home'), to: Routes.page_path(@conn, :index), class: "nav-link" %>
-    <%= link raw(~s'<i class="fas fa-id-card"></i> Contact'), to: Routes.page_path(@conn, :index), class: "nav-link" %>
+    <%= link raw(~s'<i class="fas fa-home"></i> Home'), to: Routes.page_path(@conn, :index), class: "pseudo button" %>
+    <%= link raw(~s'<i class="fas fa-id-card"></i> Contact'), to: Routes.page_path(@conn, :index), class: "pseudo button" %>
     <%= if authenticated?(@conn) do %>
-      <%= link raw(~s'<i class="fa fa-sign-out-alt"></i> Log out'), to: Routes.auth_path(@conn, :delete), method: :delete, class: "nav-link" %>
+      <%= link raw(~s'<i class="fa fa-sign-out-alt"></i> Log out'), to: Routes.auth_path(@conn, :delete), method: :delete, class: "pseudo button" %>
     <% else %>
-      <%= link raw(~s'<i class="fas fa-sign-in-alt"></i>'), to: Routes.auth_path(@conn, :new), class: "nav-link" %>
+      <%= link raw(~s'<i class="fas fa-sign-in-alt"></i> Log in'), to: Routes.auth_path(@conn, :new), class: "pseudo button" %>
     <% end %>
   </div>
 </nav>
