--- a/lib/updtr_web/templates/layout/_flash.html.eex
+++ b/lib/updtr_web/templates/layout/_flash.html.eex
@@ -1,16 +1,15 @@
 <%= if get_flash(@conn, :error) do %>
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
- <%= get_flash(@conn, :error) %>
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
+<div class="ui message red">
+  <div class="header">
+    <%= get_flash(@conn, :error) %>
+  </div>
 </div>
 <% end %>
+
 <%= if get_flash(@conn, :info) do %>
-<div class="alert alert-info alert-dismissible fade show" role="alert">
- <%= get_flash(@conn, :info) %>
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
+<div class="ui message blue">
+  <div class="header">
+    <%= get_flash(@conn, :info) %>
+  </div>
 </div>
 <% end %>
