--- a/lib/updtr_web/templates/layout/_main-content.html.eex
+++ b/lib/updtr_web/templates/layout/_main-content.html.eex
@@ -1,2 +1,2 @@
-<%= render "_flash.html", assigns %>
+<%# <%= render "_flash.html", assigns %> 
 <%= render @view_module, @view_template, assigns %>
