--- a/lib/updtr_web/templates/layout/app.html.eex
+++ b/lib/updtr_web/templates/layout/app.html.eex
@@ -13,17 +13,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
 
+  <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>
+
   <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
 </head>
 
-<body>
-  <%# <%= render "_navigation.html", assigns %>
-  <div class="ui middle aligned center aligned grid">
+
+<body id="root">
+  <%= render "_navigation.html", assigns %>
+  <div class="ui main container" style="margin-top: 7em">
     <%= render "_main-content.html", assigns %>
   </div>
-  <%# <%= render "_footer.html", assigns %>
-
-
+  <%= render "_footer.html", assigns %>
 </body>
 
 </html>
