--- a/lib/updtr_web/templates/user/new.html.eex
+++ b/lib/updtr_web/templates/user/new.html.eex
@@ -1,42 +1,24 @@
-<div class="row justify-content-center mt-5">
-  <div class="col-md-4 mt-5">
-    <div class="card">
-      <div class="card-header">
-        Sign up for <strong>Updtr.io</strong>
-      </div>
-      <div class="card-body login-card-body">
-        <p class="login-box-msg">Welcome to Updtr.io, fill in the following details to create a new account. By registering you accept the terms of service</p>
-        <%= form_for @changeset, Routes.user_path(@conn, :create), fn f -> %>
-        <div class="input-group mb-3">
-          <%= email_input f, :email, placeholder: "Email", class: error_class(f, :email), required: true %>
-          <div class="input-group-append">
-            <div class="input-group-text">
-              <span class="fas fa-envelope"></span>
-            </div>
-          </div>
-          <%= error_tag f, :email %>
-        </div>
-
-        <div class="input-group mb-3">
-          <%= password_input f, :password, placeholder: "Password", class: error_class(f, :password), required: true, minlength: 10 %>
-          <div class="input-group-append">
-            <div class="input-group-text">
-              <span class="fas fa-lock"></span>
-            </div>
-          </div>
-          <%= error_tag f, :password %>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <%= submit "Create account", class: "btn btn-primary btn-block" %>
-          </div>
-
-        </div>
-        <% end %>
-        <p class="mt-3 mb-1">
-          <%= link "I already have an account", to: Routes.auth_path(@conn, :new) %>
-        </p>
-      </div>
-    </div>
-  </div>
+<div class="ui center aligned grid">
+  <div class="ui container">
+    <h2 class="ui huge header">
+        Sign up
+    </h2>
+		<div class="ui attached message">
+			<div class="header">
+				Welcome to Updtr!
+			</div>
+    	<p>Fill in the following details to create a new account</p>
+		</div>
+    <%= form_for @changeset, Routes.user_path(@conn, :create), [class: "ui form attached fluid segment"], fn f -> %>
+			<div class="ui large form">
+				<%= input f, :email, placeholder: "Email", required: true, prepend_icon: "envelope" %>
+				<%= input f, :password, placeholder: "Password", required: true, minlength: 10, prepend_icon: "lock" %>
+				<%= submit "Create account", class: "ui blue submit button" %>
+			</div>
+			<% end %>
+			<div class="ui bottom attached warning message">
+				<i class="icon help"></i>
+				Already signed up? <%= link "Login here", to: Routes.auth_path(@conn, :new) %> instead.
+			</div>
+	</div>
 </div>
